# laughing-octo-spoon

./: .env.test  pyproject.toml
app/: app.py  models.py  test_access_tokens.py  test_execute_gdpr_deletions_cdp.py  test_gdpr_deletions_api_call.py  test_merge_data_to_databricks_table.py  test_profile_store_table.py  test_write_data_to_databricks_table.py  utils.py
app/configs/: resource_dependency_mapping.yml  resource_rest_api_details.yml  resource_singular_mapping.yml
app/sql_queries/: cust_gdpr_table.sql  gdpr_user_deletions.sql  gdpr_user_deletions_date.sql  profile_store_table.sql
app/templates/: index.html
app/templates/includes/: _navbar.html
dockerfiles/: .dockerignore  Dockerfile
